[workspace]
resolver = "2"
members = [
    "envs",
    "envs-cli",
]

[workspace.dependencies]
clap = { version = "4.5.23", default-features = false, features = ["std", "help", "usage", "suggestions", "derive"] }
regex = {version = "1.11.1"}

[patch.crates-io]
envs = { path = "envs" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[workspace.metadata.release]
shared-version = "workspace"
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
