[workspace]
resolver = "2"
members = [
    "envs",
    "envs-cli",
]

[workspace.dependencies]
clap = { version = "4.5.23", default-features = false, features = ["std", "help", "usage", "suggestions", "derive"] }
regex = {version = "1.11.1"}

[patch.crates-io]
envs = { path = "envs" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[workspace.metadata.release]
shared-version = true
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "chore: release version {{version}}"
pre-release-commit-message = "chore: release version {{version}}"
pre-release-hook = ["git", "cliff", "--workdir", "../", "--output", "../CHANGELOG.md", "--tag", "{{version}}" ]
