[package]
name = "envs-cli"
description = "🛠️ A Rust CLI tool that outputs comprehensive system information using the envs library."
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/envs"
homepage = "https://github.com/lvillis/envs"
documentation = "https://github.com/lvillis/envs/blob/main/README.md"

[dependencies]
clap = { version = "4.5.20", default-features = false, features = ["std", "help", "usage", "suggestions", "derive"] }
envs = { version = "0.2.0" }
